Crash in [@ libGLES_mali.so@0xa68314] Oppo F11 Pro CPH1969/F11 CPH1911 / Mali G72
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | fixed |
| firefox87 | --- | fixed |
People
(Reporter: kbrosnan, Assigned: jnicol)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-release+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/a3304335-ae63-436b-a9d2-136180210125
Reason: SIGSEGV /SEGV_MAPERR
Top 10 frames of crashing thread:
0 libGLES_mali.so libGLES_mali.so@0xa68314
1 libGLES_mali.so libGLES_mali.so@0x7d1348
2 libGLES_mali.so libGLES_mali.so@0x7cfce4
3 libGLES_mali.so libGLES_mali.so@0x7cf1bc
4 libGLES_mali.so libGLES_mali.so@0x8241d0
5 libGLES_mali.so libGLES_mali.so@0xae9578
6 libGLES_mali.so libGLES_mali.so@0xae9200
7 libGLES_mali.so libGLES_mali.so@0xacd8a4
8 libGLES_mali.so libGLES_mali.so@0xacd90c
9 libGLES_mali.so libGLES_mali.so@0xaef4f0
Crash happens on 84+ so probably not a WebRender rollout bug.
Comment 1•4 years ago
|
||
Adding similar crash on another Mali G72 device.
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Reporter | ||
Comment 2•4 years ago
|
||
Looking at the Google Play device console there are 213 different devices that use Mali-G72 so this signature is likely highly sharded over many crash addresses.
Updated•4 years ago
|
| Reporter | ||
Comment 3•4 years ago
|
||
User reports crashing when videos are playing https://www.reddit.com/r/firefox/comments/lhdvuo/firefox_keeps_crashing_while_playing/
| Assignee | ||
Comment 4•4 years ago
|
||
The user also stated it started with the android 11 update, and the crash stats confirm that. It was the same with bug 1688017 on Mali-G76 (where users also said playing video on twitter caused the crash).
Looking through the crash stats super search for any libGLES_mali.so signatures, they are dominated by Mali-G72 and Mali-G76 on Android 11, and then much lower numbers for various signatures for G71 on older versions (such as bug 1688796).
I think we should update the block from bug 1688017 to include G72 as well as G76, but limit it to Android 11.
| Assignee | ||
Comment 5•4 years ago
|
||
In bug 1688017 we blocked webrender on Mali-G76 devices due to reports
of crashes when playing video. Based on more reports by users and
further investigation of the crash data, it appears that Mali-G72 GPUs
are also affected by the same bug, but only on Android 11 (for both
GPUs). Crashes on other Mali GPUs and earlier android versions do
exist, but in much lower numbers.
Update the block to include G72 as well as G76, but only for Android
11.
Updated•4 years ago
|
Comment 7•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 8•4 years ago
|
||
Comment on attachment 9202930 [details]
Bug 1688705 - Block webrender on Mali-G72 and G76 on Android 11. r?aosmond
Beta/Release Uplift Approval Request
- User impact if declined: Crashes when playing video for users with Mali G72 GPUs running Android 11.
Less importantly: Users with Mali-G76 running Android <= 10 won't get webrender, despite not being affected by the crash.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Disables webrender on devices affected by driver bug. Alternate graphics backend is still in widespread use and well tested.
- String changes made/needed:
Comment 9•4 years ago
|
||
Comment on attachment 9202930 [details]
Bug 1688705 - Block webrender on Mali-G72 and G76 on Android 11. r?aosmond
Morphing it into an uplift request in mozilla-release as we are in RC week. Let's take it in our RC build.
Updated•4 years ago
|
Comment 10•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Description
•