Bug 1688705 - Block webrender on Mali-G72 and G76 on Android 11. r=aosmond, a=pascalc

In bug 1688017 we blocked webrender on Mali-G76 devices due to reports
of crashes when playing video. Based on more reports by users and
further investigation of the crash data, it appears that Mali-G72 GPUs
are also affected by the same bug, but only on Android 11 (for both
GPUs). Crashes on other Mali GPUs and earlier android versions do
exist, but in much lower numbers.

Update the block to include G72 as well as G76, but only for Android
11.

Differential Revision: https://phabricator.services.mozilla.com/D105047