widget/android/GfxInfo.cpp
@@ -596,10 +596,14 @@ nsresult GfxInfo::GetFeatureStatusImpl(
       // Enable Webrender on all Adreno 6xx devices
       isUnblocked |= gpu.Find("Adreno (TM) 6", /*ignoreCase*/ true) >= 0;
 
-      // Enable Webrender on all Mali-Gxx GPUs, excluding G76 due to bug
-      // 1688017, and G31 due to bug 1689947.
+      // Enable Webrender on all Mali-Gxx GPUs...
       isUnblocked |= gpu.Find("Mali-G", /*ignoreCase*/ true) >= 0 &&
-                     gpu.Find("Mali-G76", /*ignoreCase*/ true) == kNotFound &&
+                     // Excluding G72 and G76 on Android 11, due to
+                     // bugs 1688705 and 1688017.
+                     !(mSDKVersion == 30 &&
+                       (gpu.Find("Mali-G72", /*ignoreCase*/ true) >= 0 ||
+                        gpu.Find("Mali-G76", /*ignoreCase*/ true) >= 0)) &&
+                     // And excluding G31 due to bug 1689947.
                      gpu.Find("Mali-G31", /*ignoreCase*/ true) == kNotFound;
 
       if (!isUnblocked) {
